--- a/src/App.css
+++ b/src/App.css
@@ -5,8 +5,7 @@
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
-#root{
-    padding: 40px;
+.app{
     width: 100%;
     height: 100vh;
     display: flex;
@@ -15,37 +14,32 @@
     align-items: center;
     gap: 15px;
     background-color: chocolate;
+    color: #fff;
 }
-
 .board{
-    /* box-shadow: 2.5px 2.5px 5px grey; */
+    width: 300px;
+    height: 300px;
+    margin: 15px;
+    color: #fff;
+    border-radius: 15px;
     background-color: khaki;
-    /* border: 2px solid black; */
-    width: 400px;
-    height: 400px;
     padding: 30px;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    border-radius: 15px;
-    margin: auto;
-    color: #fff;
 }
-
 .row{
     display: flex;
 }
-
 .block{
     color: #fff;
     background-color: chocolate;
     cursor: pointer;
     border-radius: 10px;
     margin: 5px;
-    width: 100px;
-    height: 100px;
-    /* border: 2px solid rgba(49, 18, 18, 0.726); */
+    width: 80px;
+    height: 80px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -66,9 +60,21 @@ h1,h2{
     border-radius: 7px;
     background-color: khaki;
     color: chocolate;
-    /* box-shadow: 2px 2px 5px grey; */
     border: none;
     outline: none;
     cursor: pointer;
     font-weight: bold;
+}
+
+
+@media  screen and (min-width:600px) {
+    .board{
+        width: 400px;
+        height: 400px;
+    }
+    .block{
+        width: 100px;
+        height: 100px;
+    }
+   
 }
